[package]
name = "gtk-glium-texture"
edition = "2021"

[dependencies]

gtk = { version = "0.8.1", package = "gtk4", features = ["v4_10"] }
glium = { version = "0.34" }
epoxy = { version = "0.1.0" }
libloading = { version = "0.8.0" }
image = "0.24"

[dependencies.winit]
version = "0.29"
features = []
default-features = false

[dependencies.glutin-winit]
version = "0.4"
features = []
default-features = false

[dependencies.glutin]
version = "0.31"
features = []
default-features = false

[dependencies.raw-window-handle]
version = "0.5"
features = []
default-features = false